// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test /api/top-langs contract > should match the private missing-username response snapshot 1`] = `
{
  "content": "<svg width="576.5" height="120" viewBox="0 0 576.5 120" fill="#fffefe" xmlns="http://www.w3.org/2000/svg">
    <style>
    .text { font: 600 16px 'Segoe UI', Ubuntu, Sans-Serif; fill: #2f80ed }
    .small { font: 600 12px 'Segoe UI', Ubuntu, Sans-Serif; fill: #434d58 }
    .gray { fill: #858585 }
    </style>
    <rect x="0.5" y="0.5" width="575.5" height="99%" rx="4.5" fill="#fffefe" stroke="#e4e2e2"/>
    <text x="25" y="45" class="text">Something went wrong!</text>
    <text data-testid="message" x="25" y="55" class="text small">
      <tspan x="25" dy="18">This username is not whitelisted</tspan>
      <tspan x="25" dy="18" class="gray">Please deploy your own instance</tspan>
    </text>
    </svg>",
  "headers": [
    [
      "Cache-Control",
      "max-age=36000, s-maxage=36000, stale-while-revalidate=86400",
    ],
    [
      "Content-Type",
      "image/svg+xml",
    ],
  ],
}
`;

exports[`Test /api/top-langs contract > should match the private non-whitelisted username response snapshot 1`] = `
{
  "content": "<svg width="576.5" height="120" viewBox="0 0 576.5 120" fill="#fffefe" xmlns="http://www.w3.org/2000/svg">
    <style>
    .text { font: 600 16px 'Segoe UI', Ubuntu, Sans-Serif; fill: #2f80ed }
    .small { font: 600 12px 'Segoe UI', Ubuntu, Sans-Serif; fill: #434d58 }
    .gray { fill: #858585 }
    </style>
    <rect x="0.5" y="0.5" width="575.5" height="99%" rx="4.5" fill="#fffefe" stroke="#e4e2e2"/>
    <text x="25" y="45" class="text">Something went wrong!</text>
    <text data-testid="message" x="25" y="55" class="text small">
      <tspan x="25" dy="18">This username is not whitelisted</tspan>
      <tspan x="25" dy="18" class="gray">Please deploy your own instance</tspan>
    </text>
    </svg>",
  "headers": [
    [
      "Cache-Control",
      "max-age=36000, s-maxage=36000, stale-while-revalidate=86400",
    ],
    [
      "Content-Type",
      "image/svg+xml",
    ],
  ],
}
`;

exports[`Test /api/top-langs contract > should match the public blacklisted-username response snapshot 1`] = `
{
  "content": "<svg width="576.5" height="120" viewBox="0 0 576.5 120" fill="#fffefe" xmlns="http://www.w3.org/2000/svg">
    <style>
    .text { font: 600 16px 'Segoe UI', Ubuntu, Sans-Serif; fill: #2f80ed }
    .small { font: 600 12px 'Segoe UI', Ubuntu, Sans-Serif; fill: #434d58 }
    .gray { fill: #858585 }
    </style>
    <rect x="0.5" y="0.5" width="575.5" height="99%" rx="4.5" fill="#fffefe" stroke="#e4e2e2"/>
    <text x="25" y="45" class="text">Something went wrong!</text>
    <text data-testid="message" x="25" y="55" class="text small">
      <tspan x="25" dy="18">This username is blacklisted</tspan>
      <tspan x="25" dy="18" class="gray">Please deploy your own instance</tspan>
    </text>
    </svg>",
  "headers": [
    [
      "Cache-Control",
      "max-age=36000, s-maxage=36000, stale-while-revalidate=86400",
    ],
    [
      "Content-Type",
      "image/svg+xml",
    ],
  ],
}
`;

exports[`Test /api/top-langs contract > should match the public happy-path response snapshot 1`] = `
{
  "content": "<svg width="300" height="285" viewBox="0 0 300 285" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="descId">
        <title id="titleId"/>
        <desc id="descId"/>
        <style>
          .header {
            font: 600 18px 'Segoe UI', Ubuntu, Sans-Serif;
            fill: #2f80ed;
            animation: fadeInAnimation 0.8s ease-in-out forwards;
          }
          @supports(-moz-appearance: auto) {
            /* Selector detects Firefox */
            .header { font-size: 15.5px; }
          }
          
    @keyframes slideInAnimation {
      from {
        width: 0;
      }
      to {
        width: calc(100%-100px);
      }
    }
    @keyframes growWidthAnimation {
      from {
        width: 0;
      }
      to {
        width: 100%;
      }
    }
    .stat {
      font: 600 14px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif; fill: #434d58;
    }
    @supports(-moz-appearance: auto) {
      /* Selector detects Firefox */
      .stat { font-size:12px; }
    }
    .bold { font-weight: 700 }
    .lang-name {
      font: 400 11px "Segoe UI", Ubuntu, Sans-Serif;
      fill: #434d58;
    }
    .stagger {
      opacity: 0;
      animation: fadeInAnimation 0.3s ease-in-out forwards;
    }
    #rect-mask rect{
      animation: slideInAnimation 1s ease-in-out forwards;
    }
    .lang-progress{
      animation: growWidthAnimation 0.6s ease-in-out forwards;
    }
    

          
      /* Animations */
      @keyframes scaleInAnimation {
        from {
          transform: translate(-5px, 5px) scale(0);
        }
        to {
          transform: translate(-5px, 5px) scale(1);
        }
      }
      @keyframes fadeInAnimation {
        from {
          opacity: 0;
        }
        to {
          opacity: 1;
        }
      }
    
          
        </style>

        

        <rect data-testid="card-bg" x="0.5" y="0.5" rx="4.5" height="99%" stroke="#e4e2e2" width="299" fill="#fffefe" stroke-opacity="1"/>

        
      <g data-testid="card-title" transform="translate(25, 35)">
        <g transform="translate(0, 0)">
      <text x="0" y="0" class="header" data-testid="header">Most Used Languages</text>
    </g>
      </g>
    

        <g data-testid="main-card-body" transform="translate(0, 55)">
          
    <svg data-testid="lang-items" x="25">
      <g transform="translate(0, 0)">
    <g class="stagger" style="animation-delay: 450ms">
      <text data-testid="lang-name" x="2" y="15" class="lang-name">Rust</text>
      <text x="215" y="34" class="lang-name">70.92%</text>
      
    <svg width="205" x="0" y="25">
      <rect data-testid="progress-background" rx="5" ry="5" x="0" y="0" width="205" height="8" fill="#ddd"/>
      <svg data-testid="lang-progress" width="70.92198581560284%">
        <rect height="8" fill="#dea584" rx="5" ry="5" x="0" y="0" class="lang-progress" style="animation-delay: 750ms;"/>
      </svg>
    </svg>
  
    </g>
  </g><g transform="translate(0, 40)">
    <g class="stagger" style="animation-delay: 600ms">
      <text data-testid="lang-name" x="2" y="15" class="lang-name">HTML</text>
      <text x="215" y="34" class="lang-name">12.77%</text>
      
    <svg width="205" x="0" y="25">
      <rect data-testid="progress-background" rx="5" ry="5" x="0" y="0" width="205" height="8" fill="#ddd"/>
      <svg data-testid="lang-progress" width="12.76595744680851%">
        <rect height="8" fill="#0f0" rx="5" ry="5" x="0" y="0" class="lang-progress" style="animation-delay: 900ms;"/>
      </svg>
    </svg>
  
    </g>
  </g><g transform="translate(0, 80)">
    <g class="stagger" style="animation-delay: 750ms">
      <text data-testid="lang-name" x="2" y="15" class="lang-name">JavaScript</text>
      <text x="215" y="34" class="lang-name">8.51%</text>
      
    <svg width="205" x="0" y="25">
      <rect data-testid="progress-background" rx="5" ry="5" x="0" y="0" width="205" height="8" fill="#ddd"/>
      <svg data-testid="lang-progress" width="8.51063829787234%">
        <rect height="8" fill="#0ff" rx="5" ry="5" x="0" y="0" class="lang-progress" style="animation-delay: 1050ms;"/>
      </svg>
    </svg>
  
    </g>
  </g><g transform="translate(0, 120)">
    <g class="stagger" style="animation-delay: 900ms">
      <text data-testid="lang-name" x="2" y="15" class="lang-name">TypeScript</text>
      <text x="215" y="34" class="lang-name">6.38%</text>
      
    <svg width="205" x="0" y="25">
      <rect data-testid="progress-background" rx="5" ry="5" x="0" y="0" width="205" height="8" fill="#ddd"/>
      <svg data-testid="lang-progress" width="6.382978723404255%">
        <rect height="8" fill="#3178c6" rx="5" ry="5" x="0" y="0" class="lang-progress" style="animation-delay: 1200ms;"/>
      </svg>
    </svg>
  
    </g>
  </g><g transform="translate(0, 160)">
    <g class="stagger" style="animation-delay: 1050ms">
      <text data-testid="lang-name" x="2" y="15" class="lang-name">Java</text>
      <text x="215" y="34" class="lang-name">1.42%</text>
      
    <svg width="205" x="0" y="25">
      <rect data-testid="progress-background" rx="5" ry="5" x="0" y="0" width="205" height="8" fill="#ddd"/>
      <svg data-testid="lang-progress" width="2%">
        <rect height="8" fill="#f00" rx="5" ry="5" x="0" y="0" class="lang-progress" style="animation-delay: 1350ms;"/>
      </svg>
    </svg>
  
    </g>
  </g>
    </svg>
  
        </g>
      </svg>",
  "headers": [
    [
      "Cache-Control",
      "max-age=36000, s-maxage=36000, stale-while-revalidate=86400",
    ],
    [
      "Content-Type",
      "image/svg+xml",
    ],
  ],
}
`;

exports[`Test /api/top-langs contract > should match the public many-params response snapshot 1`] = `
{
  "content": "<svg width="420" height="110" viewBox="0 0 420 110" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="descId">
        <title id="titleId"/>
        <desc id="descId"/>
        <style>
          .header {
            font: 600 18px 'Segoe UI', Ubuntu, Sans-Serif;
            fill: #123456;
            animation: fadeInAnimation 0.8s ease-in-out forwards;
          }
          @supports(-moz-appearance: auto) {
            /* Selector detects Firefox */
            .header { font-size: 15.5px; }
          }
          
    @keyframes slideInAnimation {
      from {
        width: 0;
      }
      to {
        width: calc(100%-100px);
      }
    }
    @keyframes growWidthAnimation {
      from {
        width: 0;
      }
      to {
        width: 100%;
      }
    }
    .stat {
      font: 600 14px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif; fill: #abcdef;
    }
    @supports(-moz-appearance: auto) {
      /* Selector detects Firefox */
      .stat { font-size:12px; }
    }
    .bold { font-weight: 700 }
    .lang-name {
      font: 400 11px "Segoe UI", Ubuntu, Sans-Serif;
      fill: #abcdef;
    }
    .stagger {
      opacity: 0;
      animation: fadeInAnimation 0.3s ease-in-out forwards;
    }
    #rect-mask rect{
      animation: slideInAnimation 1s ease-in-out forwards;
    }
    .lang-progress{
      animation: growWidthAnimation 0.6s ease-in-out forwards;
    }
    

          
      /* Animations */
      @keyframes scaleInAnimation {
        from {
          transform: translate(-5px, 5px) scale(0);
        }
        to {
          transform: translate(-5px, 5px) scale(1);
        }
      }
      @keyframes fadeInAnimation {
        from {
          opacity: 0;
        }
        to {
          opacity: 1;
        }
      }
    
          * { animation-duration: 0s !important; animation-delay: 0s !important; }
        </style>

        

        <rect data-testid="card-bg" x="0.5" y="0.5" rx="4.5" height="99%" stroke="#e4e2e2" width="419" fill="#0f172a" stroke-opacity="0"/>

        

        <g data-testid="main-card-body" transform="translate(0, 25)">
          
    <svg data-testid="lang-items" x="25">
      
  
      <mask id="rect-mask">
          <rect x="0" y="0" width="370" height="8" fill="white" rx="5"/>
        </mask>
        
        <rect mask="url(#rect-mask)" data-testid="lang-progress" x="0" y="0" width="256.98" height="8" fill="#3178c6"/>
      
        <rect mask="url(#rect-mask)" data-testid="lang-progress" x="256.98" y="0" width="60.57" height="8" fill="#f00"/>
      
        <rect mask="url(#rect-mask)" data-testid="lang-progress" x="317.55" y="0" width="52.45" height="8" fill="#00f"/>
      
      
    <g transform="translate(0, 25)">
      <g transform="translate(0, 0)"><g transform="translate(0, 0)">
    <g class="stagger" style="animation-delay: 450ms">
      <circle cx="5" cy="6" r="5" fill="#3178c6"/>
      <text data-testid="lang-name" x="15" y="10" class="lang-name">
        TypeScript 19.0 B
      </text>
    </g>
  </g><g transform="translate(0, 25)">
    <g class="stagger" style="animation-delay: 600ms">
      <circle cx="5" cy="6" r="5" fill="#f00"/>
      <text data-testid="lang-name" x="15" y="10" class="lang-name">
        Java 4.5 B
      </text>
    </g>
  </g></g><g transform="translate(150, 0)"><g transform="translate(0, 0)">
    <g class="stagger" style="animation-delay: 450ms">
      <circle cx="5" cy="6" r="5" fill="#00f"/>
      <text data-testid="lang-name" x="15" y="10" class="lang-name">
        Python 3.9 B
      </text>
    </g>
  </g></g>
    </g>
  
    </svg>
  
        </g>
      </svg>",
  "graphqlRequest": "{"query":"\\n      query userInfo($login: String!, $ownerAffiliations: [RepositoryAffiliation]) {\\n        user(login: $login) {\\n          # do not fetch forks\\n          repositories(ownerAffiliations: $ownerAffiliations, isFork: false, first: 100) {\\n            nodes {\\n              name\\n              languages(first: 10, orderBy: {field: SIZE, direction: DESC}) {\\n                edges {\\n                  size\\n                  node {\\n                    color\\n                    name\\n                  }\\n                }\\n              }\\n            }\\n          }\\n        }\\n      }\\n      ","variables":{"login":"anuraghazra","ownerAffiliations":["OWNER","COLLABORATOR"]}}",
  "headers": [
    [
      "Cache-Control",
      "max-age=36000, s-maxage=36000, stale-while-revalidate=86400",
    ],
    [
      "Content-Type",
      "image/svg+xml",
    ],
  ],
}
`;

exports[`Test /api/top-langs contract > should match the public missing-username response snapshot 1`] = `
{
  "content": "<svg width="576.5" height="120" viewBox="0 0 576.5 120" fill="#fffefe" xmlns="http://www.w3.org/2000/svg">
    <style>
    .text { font: 600 16px 'Segoe UI', Ubuntu, Sans-Serif; fill: #2f80ed }
    .small { font: 600 12px 'Segoe UI', Ubuntu, Sans-Serif; fill: #434d58 }
    .gray { fill: #858585 }
    </style>
    <rect x="0.5" y="0.5" width="575.5" height="99%" rx="4.5" fill="#fffefe" stroke="#e4e2e2"/>
    <text x="25" y="45" class="text">Something went wrong!</text>
    <text data-testid="message" x="25" y="55" class="text small">
      <tspan x="25" dy="18">Missing params "username" make sure you pass the parameters in URL</tspan>
      <tspan x="25" dy="18" class="gray"/>
    </text>
    </svg>",
  "headers": [
    [
      "Cache-Control",
      "max-age=600, s-maxage=600, stale-while-revalidate=86400",
    ],
    [
      "Content-Type",
      "image/svg+xml",
    ],
  ],
}
`;

exports[`Test /api/top-langs contract > should render error card in same theme as requested card 1`] = `
{
  "content": "<svg width="576.5" height="120" viewBox="0 0 576.5 120" fill="#0a0f0b" xmlns="http://www.w3.org/2000/svg">
    <style>
    .text { font: 600 16px 'Segoe UI', Ubuntu, Sans-Serif; fill: #abd200 }
    .small { font: 600 12px 'Segoe UI', Ubuntu, Sans-Serif; fill: #68b587 }
    .gray { fill: #858585 }
    </style>
    <rect x="0.5" y="0.5" width="575.5" height="99%" rx="4.5" fill="#0a0f0b" stroke="#e4e2e2"/>
    <text x="25" y="45" class="text">Something went wrong!</text>
    <text data-testid="message" x="25" y="55" class="text small">
      <tspan x="25" dy="18">Missing params "username" make sure you pass the parameters in URL</tspan>
      <tspan x="25" dy="18" class="gray"/>
    </text>
    </svg>",
  "headers": [
    [
      "Cache-Control",
      "max-age=600, s-maxage=600, stale-while-revalidate=86400",
    ],
    [
      "Content-Type",
      "image/svg+xml",
    ],
  ],
}
`;
